Navbar background changed to transparent

--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@
       position: absolute;
       top: 60px;
       right: 20px;
-      background-color: #007BFF;
+      background-color: #0677f0;
       border-radius: 5px;
       padding: 1rem;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
